fix spacing in about.jsx

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -33,7 +33,7 @@
 .profile-text p {
     font-weight: 600;
     width: 80%;
-    line-height: 1.em;
+    line-height: 2em;
     text-align: justify;
     font-family: 'Montserrat', sans-serif;
 }
